// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleByline Native renders correctly with a single author 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/alexandra-frean"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with a single inline element 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
    Lindsay McIntosh Scottish Political Editor
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with an empty AST (empty byline on DB) 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
/>
`;

exports[`ArticleByline Native renders correctly with multiple authors separated by spaces 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/camilla-long"
  >
    Camilla Long
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
     
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/mike-atherton"
  >
    Mike Atherton
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
     
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/alexandra-frean"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with multiple authors separated by text with commas 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/camilla-long"
  >
    Camilla Long
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
    , 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/mike-atherton"
  >
    Mike Atherton
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
    , 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/alexandra-frean"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with styles 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/alexandra-frean"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with the author at the end 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
    RBS Six Nations 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/mike-atherton"
  >
    Mike Atherton
  </Text>
</View>
`;

exports[`ArticleByline Native renders correctly with the author in the begining 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#069",
          "textDecorationLine": "underline",
        },
        Object {
          "color": "#696969",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 13,
          "lineHeight": 14,
        },
      ]
    }
    url="profile/camilla-long"
  >
    Camilla Long
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 14,
      }
    }
  >
    , Environment Editor
  </Text>
</View>
`;
